syntax = "proto3";
package milvus.proto.backup;

option go_package="github.com/zilliztech/milvus-backup/core/proto/backuppb";

import "schema.proto";
import "common.proto";

service MilvusBackupService {
  // Create backup
  rpc CreateBackup(CreateBackupRequest) returns (CreateBackupResponse) {}
  // Get backup with the chosen name
  rpc GetBackup(GetBackupRequest) returns (GetBackupResponse) {}
  // List backups that contains the given collection name, if collection is not given, return all backups in the cluster
  rpc ListBackups(ListBackupsRequest) returns (ListBackupsResponse) {}
  // Delete backup by given backup name
  rpc DeleteBackup(DeleteBackupRequest) returns (DeleteBackupResponse) {}
  // Load backup to milvus, return backup load report
  rpc LoadBackup(LoadBackupRequest) returns (LoadBackupResponse) {}

  // Copy backup between buckets
  // temporary interface since currently milvus BulkInsert doesn't support read data from other bucket
  // rpc CopyBackup(CopyBackupRequest) returns (CopyBackupResponse) {}
}

enum MsgType {
  Undefined = 0;
  CreateBackup = 100;
  GetBackup = 101;
  ListBackups = 102;
  DeleteBackup = 103;
  LoadBackup = 104;
}

message MsgBase {
  MsgType msg_type = 1;
  int64  msgID = 2;
  uint64 timestamp = 3;
}

enum StatusCode {
  Unknown = 0;
  Success = 1;
  UnexpectedError = 2;
  ConnectFailed = 3;
  PermissionDenied = 4;
}

message Status {
  StatusCode status_code = 1;
  string reason = 2;
}

/**
 * lite version of Collection info
 */
message CollectionBackupInfo {
  int64 collection_id = 1;
  string db_name = 2;
  string collection_name = 3;
  schema.CollectionSchema schema = 4;
  int32 shards_num = 5;
  common.ConsistencyLevel consistency_level = 6;
  // array of partition backup
  repeated PartitionBackupInfo partition_backups = 7;
  uint64 backup_timestamp = 8;
  // backup progress status
  StatusCode backup_status = 9;
  // backup progress error
  string backup_error = 10;
  // whether the backup is able to recover
  string health = 11;
}

message PartitionBackupInfo {
  int64 partition_id = 1;
  string partition_name = 2;
  int64 collection_id = 3;
  // array of segment backup
  repeated SegmentBackupInfo segment_backups = 7;
}

/**
 * lite version of datapb.SegmentInfo
 */
message SegmentBackupInfo {
  int64 segment_id = 1;
  int64 collection_id = 2;
  int64 partition_id = 3;
  int64 num_of_rows = 4;
  repeated FieldBinlog binlogs = 5;
  repeated FieldBinlog statslogs = 6;
  repeated FieldBinlog deltalogs = 7;
}

/**
 * root of backup
 */
message BackupInfo {
  int64 id = 1;
  string name = 2;
  // backup timestamp
  uint64 backup_timestamp = 3;
  // array of collection backup
  repeated CollectionBackupInfo collection_backups = 4;
  // backup progress status
  StatusCode backup_status = 5;
  // backup progress error
  string backup_error = 6;
  // whether the backup is able to recover
  string health = 7;
}

/**
 * For level storage
 */
message CollectionLevelBackupInfo {
  repeated CollectionBackupInfo infos = 1;
}

/**
 * For level storage
 */
message PartitionLevelBackupInfo {
  repeated PartitionBackupInfo infos = 1;
}

/**
 * For level storage
 */
message SegmentLevelBackupInfo {
  repeated SegmentBackupInfo infos = 1;
}

/**
 * Create Backup in milvus
 */
message CreateBackupRequest {
  MsgBase base = 1;
  // backup name, if not set, will generate one
  string backup_name = 2;
  // collection names to backup, empty to backup all
  repeated string collection_names = 3;
}

/**
 * CreateBackupResponse
 */
message CreateBackupResponse {
  Status status = 1;
  BackupInfo backup_info = 2;
}

message GetBackupRequest {
  MsgBase base = 1;
  string backup_name = 2;
}

message GetBackupResponse {
  Status status = 1;
  BackupInfo backup_info = 2;
}


message ListBackupsRequest {
  MsgBase base = 1;
  string collection_name = 2;
}

message ListBackupsResponse {
  Status status = 1;
  repeated BackupInfo backup_infos = 2;
  repeated string failBackups = 3;
}

message DeleteBackupRequest {
  MsgBase base = 1;
  string backup_name = 2;
}

message DeleteBackupResponse {
  Status status = 1;
}

enum LoadState {
  INTIAL = 0;
  EXECUTING = 1;
  SUCCESS = 2;
  FAIL = 3;
  TIMEOUT = 4;
}

message LoadPartitionTask {
  LoadState state = 1;
  string errorMessage = 2;
  PartitionBackupInfo part_backup = 3;
  int64 duration = 4;
}

message LoadCollectionTask {
  LoadState state = 1;
  string errorMessage = 2;
  CollectionBackupInfo coll_backup = 3;
  string target_collection_name = 4;
  repeated LoadPartitionTask partition_load_tasks = 5;
  int64 duration = 6;
}

message LoadBackupRequest {
  MsgBase base = 1;
  string backup_name = 2;
  repeated string collection_names = 3;
  // Support two ways to rename the collections while recover
  // 1, set a suffix
  string collection_suffix = 4;
  // 2, give a map to rename the collections, if not given, use the original name
  map<string, string> collection_renames = 5;
}

message LoadBackupResponse {
  Status status = 1;
  BackupInfo backup_info = 2;
  repeated LoadCollectionTask collection_load_tasks = 3;
}

enum CopyType {
  Milvus2Backup = 0;
  Backup2Milvus = 1;
}


message CopyBackupRequest {
  MsgBase base = 1;
  string backup_name = 2;
  CopyType copy_type = 3;
}

message CopyBackupResponse {
  Status status = 1;
}

// copied from milvus data_coord.proto
message FieldBinlog{
  int64 fieldID = 1;
  repeated Binlog binlogs = 2;
}

message Binlog {
  int64 entries_num = 1;
  uint64 timestamp_from = 2;
  uint64 timestamp_to = 3;
  string log_path = 4;
  int64 log_size = 5;
}